bar-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar-service
  namespace: dev
  labels:
    app: bar-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: bar
