foo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foo-service
  namespace: dev
  labels:
    app: foo-service
spec:
  ports:
  - port: 80
    name: http
    targetPort: 5000
  selector:
    app: foo
