bar-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bar
  namespace: dev

spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /bar
        pathType: Prefix
        backend:
          service:
            name: bar-service
            port:
              number: 80
